DynamicReports Change Log
=========================

Changes in version 1.2.0 ()
---------------------------------------------------
- minor improvements in subtotals

Changes in version 1.1.1 (2010-06-09)
---------------------------------------------------
- groups can be grouped by data type, see DateGroupReport for an example
- minor bug fixes and improvements

Changes in version 1.1.0 (2010-05-12)
---------------------------------------------------
- new exporters - toDocx, toHtml, toOds, toOdt, toRtf, toText, toXhtml, toXlsx, toXml, toXmlss
- DynamicReports.cnd.* - conditions expression builder, see SimpleReport_Step12 for an example
- new data types - dateYear, dateMonth, dateDay
- data types can convert value to string (see ExpressionColumnReport for an example)  
- fixed bug 2997586 - the height in setDimension(Integer width, Integer height) of the DimensionComponentBuilder class is set with the width

Changes in version 1.0.1 (2010-04-21)
---------------------------------------------------
- added exporter - to png
- fixed bug - can't find dynamicreports-defaults.xml on the server

Changes in version 1.0.0 (2010-03-31)
---------------------------------------------------
Initial version
supports
- column grid
- columns : column, expression column, percentage column, ...
- subtotals : agregate, custom, percentage
- components : horizontal list, horizontal flow list, vertical list, text field, image, filler, ...
- charts : area, stackedarea, bar, bar3D, stackedbar, stackedbar3D, line, pie, pie3D, timeseries, xyarea, xybar, xyline, scatter
- groups, data types, styles, bands, report templates, detail row highlighters, ...