@@ -86,7 +86,19 @@
 			<artifactId>junit</artifactId>
 			<version>4.0</version>
 			<scope>test</scope>	
-		</dependency>      
+		</dependency>  
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.2-FINAL</version>
+			<scope>test</scope>
+		</dependency>		
+		<dependency>
+			<groupId>net.sourceforge.jexcelapi</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.6</version>
+			<scope>test</scope>
+		</dependency>		    
 	</dependencies>
 
 	<build>
